--- a/article.html
+++ b/article.html
@@ -2,212 +2,213 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8">
-<!-- 优先使用IE最新版本和Chrome -->
-<meta http-equiv="X-UA-Compatiable" content="IE=edge, chrome=1">
-<!-- 360使用Google Chrome Frame -->
-<meta name="renderer" content="webkit">
-<!-- 百度禁止转码 -->
-<meta http-equiv="Cache-Control" content="no-siteapp">
-<meta name="keywords" content="your keywords">
-<meta name="description" content="your description">
-<!-- 定义网页搜索引擎索引方式 -->
-<meta name="robots" content="index,follow">
-<!-- ios设备 -->
-<!-- 添加到主屏后的标题 -->
-<meta name="apple-mobile-web-app-title" content="标题">
-<!-- 是否启用WebApp全屏模式 -->
-<meta content="yes" name="apple-mobile-web-app-capable">
-<meta content="yes" name="apple-touch-fullscreen">
-<!-- 设置状态栏的背景颜色 -->
-<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-<!-- 禁止数字识别为电话号码 -->
-<!-- <meta content="telephone=no, email=no" name="format-detection"> -->
-<!-- Android theme-color用来控制选项卡颜色。 -->
-<meta name="theme-color" content="#747474">
-<meta name="mobile-web-app-capable" content="yes">
-<!-- 关闭chrome浏览器下翻译插件 -->
-<meta name="google" value="notranslate" />
-<!-- uc强制竖屏 -->
-<meta name="screen-orientation" content="portrait">
-<!-- QQ强制竖屏 -->
-<meta name="x5-orientation" content="portrait">
-<!-- UC强制全屏 -->
-<meta name="full-screen" content="yes">
-<!-- QQ强制全屏 -->
-<meta name="x5-fullscreen" content="true">
-<!-- UC应用模式 -->
-<meta name="browsermode" content="application">
-<!-- QQ应用模式 -->
-<meta name="x5-page-mode" content="app">
-<script src="http://g.tbcdn.cn/mtb/lib-flexible/0.3.4/??flexible_css.js,flexible.js"></script>
-<!-- IOS图标 -->
-<!-- apple-touch-icon 图片自动处理成圆角和高光等效果 -->
+    <meta charset="UTF-8">
+    <!-- 优先使用IE最新版本和Chrome -->
+    <meta http-equiv="X-UA-Compatiable" content="IE=edge, chrome=1">
+    <!-- 360使用Google Chrome Frame -->
+    <meta name="renderer" content="webkit">
+    <!-- 百度禁止转码 -->
+    <meta http-equiv="Cache-Control" content="no-siteapp">
+    <meta name="keywords" content="your keywords">
+    <meta name="description" content="your description">
+    <!-- 定义网页搜索引擎索引方式 -->
+    <meta name="robots" content="index,follow">
+    <!-- ios设备 -->
+    <!-- 添加到主屏后的标题 -->
+    <meta name="apple-mobile-web-app-title" content="标题">
+    <!-- 是否启用WebApp全屏模式 -->
+    <meta content="yes" name="apple-mobile-web-app-capable">
+    <meta content="yes" name="apple-touch-fullscreen">
+    <!-- 设置状态栏的背景颜色 -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <!-- 禁止数字识别为电话号码 -->
+    <!-- <meta content="telephone=no, email=no" name="format-detection"> -->
+    <!-- Android theme-color用来控制选项卡颜色。 -->
+    <meta name="theme-color" content="#747474">
+    <meta name="mobile-web-app-capable" content="yes">
+    <!-- 关闭chrome浏览器下翻译插件 -->
+    <meta name="google" value="notranslate" />
+    <!-- uc强制竖屏 -->
+    <meta name="screen-orientation" content="portrait">
+    <!-- QQ强制竖屏 -->
+    <meta name="x5-orientation" content="portrait">
+    <!-- UC强制全屏 -->
+    <meta name="full-screen" content="yes">
+    <!-- QQ强制全屏 -->
+    <meta name="x5-fullscreen" content="true">
+    <!-- UC应用模式 -->
+    <meta name="browsermode" content="application">
+    <!-- QQ应用模式 -->
+    <meta name="x5-page-mode" content="app">
+    <script src="http://g.tbcdn.cn/mtb/lib-flexible/0.3.4/??flexible_css.js,flexible.js"></script>
+    <!-- IOS图标 -->
+    <!-- apple-touch-icon 图片自动处理成圆角和高光等效果 -->
 
-<link rel="apple-touch-icon" href="favicon.png">
-<link rel="Shortcut Icon" href="favicon.png" type="image/x-icon">
-<link rel="stylesheet" href="css/fonts/iconfont.css">
-<link rel="stylesheet" href="css/swiper/swiper.css">
-<link rel="stylesheet" href="css/layout.css">
-	<title>文章</title>
-	<link rel="stylesheet" type="text/css" href="css/article.css">
+    <!-- <link rel="apple-touch-icon" href="favicon.png">
+    <link rel="Shortcut Icon" href="favicon.png" type="image/x-icon"> -->
+    <link rel="stylesheet" href="css/fonts/iconfont.css">
+    <link rel="stylesheet" href="css/swiper/swiper.css">
+    <link rel="stylesheet" href="css/layout.css">
+    <title>文章</title>
+    <link rel="stylesheet" type="text/css" href="css/article.css">
 </head>
 
 <body>
-	<header class="common-header">
-    <nav class="nav-bar">
-        <div class="nav-button">
-            <div class="btn-groups">
-                <a class="nav-collaspe" href="navigation.html">
-                    <i class="iconfont icon-rows"></i>
-                </a>
-                <a class="nav-search" href="search.html">
-                    <i class="iconfont icon-magnifier"></i>
+    <header class="common-header">
+        <nav class="nav-bar">
+            <div class="nav-button">
+                <div class="btn-groups">
+                    <a class="nav-collaspe" href="navigation.html">
+                        <i class="iconfont icon-rows"></i>
+                    </a>
+                    <a class="nav-search" href="search.html">
+                        <i class="iconfont icon-magnifier"></i>
+                    </a>
+                </div>
+                <div class="nav-brand">
+                    <a href="index.html">
+                        <img src="images/site-logo.png" alt="site logo">
+                    </a>
+                </div>
+                <a class="nav-cart" href="login.html">
+                    <i class="iconfont icon-cc-cart"></i>
                 </a>
             </div>
-            <div class="nav-brand">
-                <a href="index.html">
-                    <img src="images/site-logo.png" alt="site logo">
-                </a>
-            </div>
-            <a class="nav-cart" href="login.html">
-                <i class="iconfont icon-cc-cart"></i>
+        </nav>
+    </header>
+    <main class="main">
+        <section class="item-section">
+            <article class="item-article">
+                <div class="content">
+                    <h2 class="article-title">葡萄酒与巧克力的甜蜜邂逅</h2>
+                    <p>2017年11月01日 08:30 Y-Store惟度</p>
+                    <p>如果有人告诉你，葡萄酒和巧克力不能搭配在一起，请不要听信他的胡诌。因为事实恰恰相反，在选择恰当的前提下，葡萄酒和巧克力是可以成为天生一对的。下面，小编就为大家给出相应建议，让你品尝巧克力时甜蜜加倍，美味加倍。</p>
+                    <div class="content-1"></div>
+                    <p class="tips">建议：牛奶巧克力搭配瓦坡里切拉雷乔托（Reciotodalla Valpolicella）</p>
+                    <p>牛奶巧克力的奶油质地使其比较适合葡萄酒进行搭配，而你只需要一款甜度较高的葡萄酒便可使它本就浓郁的风味更加可口。小编在这里极力推荐的是——瓦坡里切拉雷乔托。</p>
+                    <div class="content-2"></div>
+                    <p>雷乔托是一款甜红葡萄酒，它由风干的葡萄酿制而成，甜度极高，因此很适合松露巧克力搭配，甚至还能够同一些黑巧克力一起享用。</p>
+                    <div class="content-3"></div>
+                    <p>其它适合同牛奶巧克力搭配的葡萄酒：布拉凯多起泡酒（Brachetto d'Acqui）、路斯格兰麝香甜白（RutherglenMuscat）。</p>
+                    <div class="content-4">
+                        <p class="p1">
+                            <span>
+                                <i class="iconfont icon-like"></i>
+                            </span>
+                        </p>
+                        <p class="p2">好文章，点个赞</p>
+                    </div>
+                </div>
+                <div class="f-content"></div>
+                <div class="content-5">
+                    <span>浏览更多文章</span>
+                    <span>></span>
+                </div>
+                <div class="f-content"></div>
+            </article>
+        </section>
+    </main>
+
+    <section class="item-section">
+        <div class="good-choose-container">
+            <h2 class="item-title">优品精选</h2>
+            <a class="good-choose" href="product.html">
+                <div></div>
+                <div>
+                    <p>2007年勃艮酒庄桃红葡萄酒</p>
+                    <p>法国 | 圣达美隆</p>
+                    <p>淡淡的麦秆色伴有柑橘和香草的味道并混有坚果味。酒体饱满...</p>
+                    <p>
+                        <span>¥866</span>
+                    </p>
+                </div>
+            </a>
+            <a class="good-choose" href="product.html">
+                <div></div>
+                <div>
+                    <p>2007年勃艮酒庄桃红葡萄酒</p>
+                    <p>法国 | 圣达美隆</p>
+                    <p>淡淡的麦秆色伴有柑橘和香草的味道并混有坚果味。酒体饱满...</p>
+                    <p>
+                        <span>¥866</span>
+                    </p>
+                </div>
+            </a>
+            <a class="good-choose" href="aproducthtml">
+                <div></div>
+                <div>
+                    <p>2007年勃艮酒庄桃红葡萄酒</p>
+                    <p>法国 | 圣达美隆</p>
+                    <p>淡淡的麦秆色伴有柑橘和香草的味道并混有坚果味。酒体饱满...</p>
+                    <p>
+                        <span>¥866</span>
+                    </p>
+                </div>
             </a>
         </div>
-    </nav>
-</header>
-	<main class="main">
-		<section class="item-section">		
-			<article class="item-article">
-				<div class="content">
-					<h2 class="article-title">葡萄酒与巧克力的甜蜜邂逅</h2>
-					<p>2017年11月01日 08:30 Y-Store惟度</p>
-					<p>如果有人告诉你，葡萄酒和巧克力不能搭配在一起，请不要听信他的胡诌。因为事实恰恰相反，在选择恰当的前提下，葡萄酒和巧克力是可以成为天生一对的。下面，小编就为大家给出相应建议，让你品尝巧克力时甜蜜加倍，美味加倍。</p>
-					<div class="content-1"></div>
-					<p class="tips">建议：牛奶巧克力搭配瓦坡里切拉雷乔托（Reciotodalla Valpolicella）</p>
-					<p>牛奶巧克力的奶油质地使其比较适合葡萄酒进行搭配，而你只需要一款甜度较高的葡萄酒便可使它本就浓郁的风味更加可口。小编在这里极力推荐的是——瓦坡里切拉雷乔托。</p>
-					<div class="content-2"></div>
-					<p>雷乔托是一款甜红葡萄酒，它由风干的葡萄酿制而成，甜度极高，因此很适合松露巧克力搭配，甚至还能够同一些黑巧克力一起享用。</p>
-					<div class="content-3"></div>
-					<p>其它适合同牛奶巧克力搭配的葡萄酒：布拉凯多起泡酒（Brachetto d'Acqui）、路斯格兰麝香甜白（RutherglenMuscat）。</p>
-					<div class="content-4">
-						<p class="p1">
-							<span>
-								<i class="iconfont icon-like"></i>
-							</span>
-						</p>
-						<p class="p2">好文章，点个赞</p>
-					</div>
-				</div>
-				<div class="f-content"></div>
-				<div class="content-5">
-					<span>浏览更多文章</span>
-					<span>></span>
-				</div>
-				<div class="f-content"></div>
-			</article>
-		</section>
-	</main>
-
-	<section class="item-section">
-    <div class="good-choose-container">
-        <h2 class="item-title">优品精选</h2>
-        <a class="good-choose" href="product.html">
-            <div></div>
-            <div>
-                <p>2007年勃艮酒庄桃红葡萄酒</p>
-                <p>法国 | 圣达美隆</p>
-                <p>淡淡的麦秆色伴有柑橘和香草的味道并混有坚果味。酒体饱满...</p>
-                <p>
-                    <span>¥866</span>
+    </section>
+    <footer class="common-footer">
+        <div class="footer-above">
+            <div class="row website-link">
+                <div class="column">
+                    <ul class="link-list">
+                        <li class="link-item">
+                            <a href="#">关于我们</a>
+                        </li>
+                        <li class="link-item">
+                            <a href="#">加入我们</a>
+                        </li>
+                        <li class="link-item">
+                            <a href="#">联系我们</a>
+                        </li>
+                        <li class="link-item">
+                            <a href="#">代理合作</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="column">
+                    <ul class="link-list">
+                        <li class="link-item">
+                            <span class="iconfont icon-Language"></span>
+                            <span>简体中文</span>
+                        </li>
+                        <li class="link-item">
+                            <a href="#">在线客服</a>
+                        </li>
+                        <li class="link-item">
+                            <a href="#">关注我们</a>
+                        </li>
+                        <li class="link-item">
+                            <span class="iconfont icon-weibotaidu"></span>
+                            <span class="iconfont icon-wechat"></span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row statement">
+                <p class="copyright">
+                    <span>Confidential</span>
+                    <span class="iconfont icon-copyright"></span>
+                    <span>2017 Y-store 广州福思酒业 版权所有</span>
+                </p>
+                <p class="callback">
+                    <span>
+                        <a href="#">法律声明</a>
+                    </span>
+                    <span>
+                        <a href="#">问题反馈</a>
+                    </span>
                 </p>
             </div>
-        </a>
-        <a class="good-choose" href="product.html">
-            <div></div>
-            <div>
-                <p>2007年勃艮酒庄桃红葡萄酒</p>
-                <p>法国 | 圣达美隆</p>
-                <p>淡淡的麦秆色伴有柑橘和香草的味道并混有坚果味。酒体饱满...</p>
-                <p>
-                    <span>¥866</span>
-                </p>
-            </div>
-        </a>
-        <a class="good-choose" href="aproducthtml">
-            <div></div>
-            <div>
-                <p>2007年勃艮酒庄桃红葡萄酒</p>
-                <p>法国 | 圣达美隆</p>
-                <p>淡淡的麦秆色伴有柑橘和香草的味道并混有坚果味。酒体饱满...</p>
-                <p>
-                    <span>¥866</span>
-                </p>
-            </div>
-        </a>
-    </div>
-</section> 
-	<footer class="common-footer">
-    <div class="footer-above">
-        <div class="row website-link">
-            <div class="column">
-                <ul class="link-list">
-                    <li class="link-item">
-                        <a href="#">关于我们</a>
-                    </li>
-                    <li class="link-item">
-                        <a href="#">加入我们</a>
-                    </li>
-                    <li class="link-item">
-                        <a href="#">联系我们</a>
-                    </li>
-                    <li class="link-item">
-                        <a href="#">代理合作</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="column">
-                <ul class="link-list">
-                    <li class="link-item">
-                        <span class="iconfont icon-Language"></span>
-                        <span>简体中文</span>
-                    </li>
-                    <li class="link-item">
-                        <a href="#">在线客服</a>
-                    </li>
-                    <li class="link-item">
-                        <a href="#">关注我们</a>
-                    </li>
-                    <li class="link-item">
-                        <span class="iconfont icon-weibotaidu"></span>
-                        <span class="iconfont icon-wechat"></span>
-                    </li>
-                </ul>
+        </div>
+        <div class="footer-below">
+            <div class="toTop" id="toTop">
+                <span class="iconfont icon-arrow_top"></span>
             </div>
         </div>
-        <div class="row statement">
-            <p class="copyright">
-                Confidential
-                <span class="iconfont icon-copyright"></span>
-                2017 Y-store 广州福思酒业 版权所有
-            </p>
-            <p class="callback">
-                <span>
-                    <a href="#">法律声明</a>
-                </span>
-                <span>
-                    <a href="#">问题反馈</a>
-                </span>
-            </p>
-        </div>
-    </div>
-    <div class="footer-below">
-        <div class="toTop" id="toTop">
-            <span class="iconfont icon-arrow_top"></span>
-        </div>
-    </div>
-</footer> <script src="js/public/jquery.min.js"></script>
-<script src="js/public/base.js"></script>
+    </footer>
+    <script src="js/public/jquery.min.js"></script>
+    <script src="js/public/base.js"></script>
     <script src="js/public/swiper/swiper.js"></script>
 </body>
 
