--- a/place.html
+++ b/place.html
@@ -3,79 +3,79 @@
 
 <head>
     <meta charset="UTF-8">
-<!-- 优先使用IE最新版本和Chrome -->
-<meta http-equiv="X-UA-Compatiable" content="IE=edge, chrome=1">
-<!-- 360使用Google Chrome Frame -->
-<meta name="renderer" content="webkit">
-<!-- 百度禁止转码 -->
-<meta http-equiv="Cache-Control" content="no-siteapp">
-<meta name="keywords" content="your keywords">
-<meta name="description" content="your description">
-<!-- 定义网页搜索引擎索引方式 -->
-<meta name="robots" content="index,follow">
-<!-- ios设备 -->
-<!-- 添加到主屏后的标题 -->
-<meta name="apple-mobile-web-app-title" content="标题">
-<!-- 是否启用WebApp全屏模式 -->
-<meta content="yes" name="apple-mobile-web-app-capable">
-<meta content="yes" name="apple-touch-fullscreen">
-<!-- 设置状态栏的背景颜色 -->
-<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-<!-- 禁止数字识别为电话号码 -->
-<!-- <meta content="telephone=no, email=no" name="format-detection"> -->
-<!-- Android theme-color用来控制选项卡颜色。 -->
-<meta name="theme-color" content="#747474">
-<meta name="mobile-web-app-capable" content="yes">
-<!-- 关闭chrome浏览器下翻译插件 -->
-<meta name="google" value="notranslate" />
-<!-- uc强制竖屏 -->
-<meta name="screen-orientation" content="portrait">
-<!-- QQ强制竖屏 -->
-<meta name="x5-orientation" content="portrait">
-<!-- UC强制全屏 -->
-<meta name="full-screen" content="yes">
-<!-- QQ强制全屏 -->
-<meta name="x5-fullscreen" content="true">
-<!-- UC应用模式 -->
-<meta name="browsermode" content="application">
-<!-- QQ应用模式 -->
-<meta name="x5-page-mode" content="app">
-<script src="http://g.tbcdn.cn/mtb/lib-flexible/0.3.4/??flexible_css.js,flexible.js"></script>
-<!-- IOS图标 -->
-<!-- apple-touch-icon 图片自动处理成圆角和高光等效果 -->
+    <!-- 优先使用IE最新版本和Chrome -->
+    <meta http-equiv="X-UA-Compatiable" content="IE=edge, chrome=1">
+    <!-- 360使用Google Chrome Frame -->
+    <meta name="renderer" content="webkit">
+    <!-- 百度禁止转码 -->
+    <meta http-equiv="Cache-Control" content="no-siteapp">
+    <meta name="keywords" content="your keywords">
+    <meta name="description" content="your description">
+    <!-- 定义网页搜索引擎索引方式 -->
+    <meta name="robots" content="index,follow">
+    <!-- ios设备 -->
+    <!-- 添加到主屏后的标题 -->
+    <meta name="apple-mobile-web-app-title" content="标题">
+    <!-- 是否启用WebApp全屏模式 -->
+    <meta content="yes" name="apple-mobile-web-app-capable">
+    <meta content="yes" name="apple-touch-fullscreen">
+    <!-- 设置状态栏的背景颜色 -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <!-- 禁止数字识别为电话号码 -->
+    <!-- <meta content="telephone=no, email=no" name="format-detection"> -->
+    <!-- Android theme-color用来控制选项卡颜色。 -->
+    <meta name="theme-color" content="#747474">
+    <meta name="mobile-web-app-capable" content="yes">
+    <!-- 关闭chrome浏览器下翻译插件 -->
+    <meta name="google" value="notranslate" />
+    <!-- uc强制竖屏 -->
+    <meta name="screen-orientation" content="portrait">
+    <!-- QQ强制竖屏 -->
+    <meta name="x5-orientation" content="portrait">
+    <!-- UC强制全屏 -->
+    <meta name="full-screen" content="yes">
+    <!-- QQ强制全屏 -->
+    <meta name="x5-fullscreen" content="true">
+    <!-- UC应用模式 -->
+    <meta name="browsermode" content="application">
+    <!-- QQ应用模式 -->
+    <meta name="x5-page-mode" content="app">
+    <script src="http://g.tbcdn.cn/mtb/lib-flexible/0.3.4/??flexible_css.js,flexible.js"></script>
+    <!-- IOS图标 -->
+    <!-- apple-touch-icon 图片自动处理成圆角和高光等效果 -->
 
-<link rel="apple-touch-icon" href="favicon.png">
-<link rel="Shortcut Icon" href="favicon.png" type="image/x-icon">
-<link rel="stylesheet" href="css/fonts/iconfont.css">
-<link rel="stylesheet" href="css/swiper/swiper.css">
-<link rel="stylesheet" href="css/layout.css">
+    <!-- <link rel="apple-touch-icon" href="favicon.png">
+    <link rel="Shortcut Icon" href="favicon.png" type="image/x-icon"> -->
+    <link rel="stylesheet" href="css/fonts/iconfont.css">
+    <link rel="stylesheet" href="css/swiper/swiper.css">
+    <link rel="stylesheet" href="css/layout.css">
     <title>红葡萄酒</title>
     <link rel="stylesheet" type="text/css" href="css/red-wine.css">
 </head>
 
 <body>
     <header class="common-header">
-    <nav class="nav-bar">
-        <div class="nav-button">
-            <div class="btn-groups">
-                <a class="nav-collaspe" href="navigation.html">
-                    <i class="iconfont icon-rows"></i>
-                </a>
-                <a class="nav-search" href="search.html">
-                    <i class="iconfont icon-magnifier"></i>
+        <nav class="nav-bar">
+            <div class="nav-button">
+                <div class="btn-groups">
+                    <a class="nav-collaspe" href="navigation.html">
+                        <i class="iconfont icon-rows"></i>
+                    </a>
+                    <a class="nav-search" href="search.html">
+                        <i class="iconfont icon-magnifier"></i>
+                    </a>
+                </div>
+                <div class="nav-brand">
+                    <a href="index.html">
+                        <img src="images/site-logo.png" alt="site logo">
+                    </a>
+                </div>
+                <a class="nav-cart" href="login.html">
+                    <i class="iconfont icon-cc-cart"></i>
                 </a>
             </div>
-            <div class="nav-brand">
-                <a href="index.html">
-                    <img src="images/site-logo.png" alt="site logo">
-                </a>
-            </div>
-            <a class="nav-cart" href="login.html">
-                <i class="iconfont icon-cc-cart"></i>
-            </a>
-        </div>
-    </nav>
-</header>
+        </nav>
+    </header>
 
     <main class="main">
         <div class="banner">
@@ -105,175 +105,196 @@
             </div>
         </section>
         <section class="item-section">
-            <div class="last-content">
-                <div class="content-pic">
-                    <a class="pic" href="product.html"></a>
-                    <a class="pic" href="product.html"></a>
+            <div class="middle-content">
+                <div class="media-container">
+                    <a class="media-item" href="product.html">
+                        <div class="item-figure">
+                            <img class="item-img" src="images/rw1.png">
+                        </div>
+                        <div class="item-figcation">
+                            <h3 class="title">2009年木桐酒庄红葡萄酒</h3>
+                            <p class="place">法国|罗纳河谷</p>
+                            <p class="price">
+                                <small>￥</small>
+                                <strong>866</strong>
+                            </p>
+                        </div>
+                    </a>
+                    <a class="media-item" href="product.html">
+                        <div class="item-figure">
+                            <img class="item-img" src="images/rw2.png">
+                        </div>
+                        <div class="item-figcation">
+                            <h3 class="title">2009年木桐酒庄红葡萄酒</h3>
+                            <p class="place">法国|罗纳河谷</p>
+                            <p class="price">
+                                <small>￥</small>
+                                <strong>866</strong>
+                            </p>
+                        </div>
+                    </a>
                 </div>
-                <div class="content-text">
-                    <div>
-                        <h3 class="title">2009年木桐酒庄红葡萄酒</h3>
-                        <p class="place">法国|罗纳河谷</p>
-                        <p class="price">
-                            <small>￥</small>
-                            <strong>866</strong>
-                        </p>
-                    </div>
-                    <div>
-                        <h3 class="title">2009年木桐酒庄红葡萄酒</h3>
-                        <p class="place">法国|罗纳河谷</p>
-                        <p class="price">
-                            <small>￥</small>
-                            <strong>866</strong>
-                        </p>
-                    </div>
+                <div class="media-container">
+                    <a class="media-item" href="product.html">
+                        <div class="item-figure">
+                            <img class="item-img" src="images/rw3.png">
+                        </div>
+                        <div class="item-figcation">
+                            <h3 class="title">2009年木桐酒庄红葡萄酒</h3>
+                            <p class="place">法国|罗纳河谷</p>
+                            <p class="price">
+                                <small>￥</small>
+                                <strong>866</strong>
+                            </p>
+                        </div>
+                    </a>
+                    <a class="media-item" href="product.html">
+                        <div class="item-figure">
+                            <img class="item-img" src="images/rw4.png">
+                        </div>
+                        <div class="item-figcation">
+                            <h3 class="title">2009年木桐酒庄红葡萄酒</h3>
+                            <p class="place">法国|罗纳河谷</p>
+                            <p class="price">
+                                <small>￥</small>
+                                <strong>866</strong>
+                            </p>
+                        </div>
+                    </a>
                 </div>
-                <div class="content-pic">
-                    <a class="pic" href="product.html"></a>
-                    <a class="pic" href="product.html"></a>
+                <div class="media-container">
+                    <a class="media-item" href="product.html">
+                        <div class="item-figure">
+                            <img class="item-img" src="images/rw5.png">
+                        </div>
+                        <div class="item-figcation">
+                            <h3 class="title">2009年木桐酒庄红葡萄酒</h3>
+                            <p class="place">法国|罗纳河谷</p>
+                            <p class="price">
+                                <small>￥</small>
+                                <strong>866</strong>
+                            </p>
+                        </div>
+                    </a>
+                    <a class="media-item" href="product.html">
+                        <div class="item-figure">
+                            <img class="item-img" src="images/rw6.png">
+                        </div>
+                        <div class="item-figcation">
+                            <h3 class="title">2009年木桐酒庄红葡萄酒</h3>
+                            <p class="place">法国|罗纳河谷</p>
+                            <p class="price">
+                                <small>￥</small>
+                                <strong>866</strong>
+                            </p>
+                        </div>
+                    </a>
                 </div>
-                <div class="content-text">
-                    <div>
-                        <h3 class="title">2009年木桐酒庄红葡萄酒</h3>
-                        <p class="place">法国|罗纳河谷</p>
-                        <p class="price">
-                            <small>￥</small>
-                            <strong>866</strong>
-                        </p>
-                    </div>
-                    <div>
-                        <h3 class="title">2009年木桐酒庄红葡萄酒</h3>
-                        <p class="place">法国|罗纳河谷</p>
-                        <p class="price">
-                            <small>￥</small>
-                            <strong>866</strong>
-                        </p>
-                    </div>
-                </div>
-                <div class="content-pic">
-                    <a class="pic" href="product.html"></a>
-                    <a class="pic" href="product.html"></a>
-                </div>
-                <div class="content-text">
-                    <div>
-                        <h3 class="title">2009年木桐酒庄红葡萄酒</h3>
-                        <p class="place">法国|罗纳河谷</p>
-                        <p class="price">
-                            <small>￥</small>
-                            <strong>866</strong>
-                        </p>
-                    </div>
-                    <div>
-                        <h3 class="title">2009年木桐酒庄红葡萄酒</h3>
-                        <p class="place">法国|罗纳河谷</p>
-                        <p class="price">
-                            <small>￥</small>
-                            <strong>866</strong>
-                        </p>
-                    </div>
-                </div>
+
+
             </div>
         </section>
         <section class="item-section">
-    <div class="good-choose-container">
-        <h2 class="item-title">优品精选</h2>
-        <a class="good-choose" href="product.html">
-            <div></div>
-            <div>
-                <p>2007年勃艮酒庄桃红葡萄酒</p>
-                <p>法国 | 圣达美隆</p>
-                <p>淡淡的麦秆色伴有柑橘和香草的味道并混有坚果味。酒体饱满...</p>
-                <p>
-                    <span>¥866</span>
-                </p>
+            <div class="good-choose-container">
+                <h2 class="item-title">优品精选</h2>
+                <a class="good-choose" href="product.html">
+                    <div></div>
+                    <div>
+                        <p>2007年勃艮酒庄桃红葡萄酒</p>
+                        <p>法国 | 圣达美隆</p>
+                        <p>淡淡的麦秆色伴有柑橘和香草的味道并混有坚果味。酒体饱满...</p>
+                        <p>
+                            <span>¥866</span>
+                        </p>
+                    </div>
+                </a>
+                <a class="good-choose" href="product.html">
+                    <div></div>
+                    <div>
+                        <p>2007年勃艮酒庄桃红葡萄酒</p>
+                        <p>法国 | 圣达美隆</p>
+                        <p>淡淡的麦秆色伴有柑橘和香草的味道并混有坚果味。酒体饱满...</p>
+                        <p>
+                            <span>¥866</span>
+                        </p>
+                    </div>
+                </a>
+                <a class="good-choose" href="aproducthtml">
+                    <div></div>
+                    <div>
+                        <p>2007年勃艮酒庄桃红葡萄酒</p>
+                        <p>法国 | 圣达美隆</p>
+                        <p>淡淡的麦秆色伴有柑橘和香草的味道并混有坚果味。酒体饱满...</p>
+                        <p>
+                            <span>¥866</span>
+                        </p>
+                    </div>
+                </a>
             </div>
-        </a>
-        <a class="good-choose" href="product.html">
-            <div></div>
-            <div>
-                <p>2007年勃艮酒庄桃红葡萄酒</p>
-                <p>法国 | 圣达美隆</p>
-                <p>淡淡的麦秆色伴有柑橘和香草的味道并混有坚果味。酒体饱满...</p>
-                <p>
-                    <span>¥866</span>
-                </p>
-            </div>
-        </a>
-        <a class="good-choose" href="aproducthtml">
-            <div></div>
-            <div>
-                <p>2007年勃艮酒庄桃红葡萄酒</p>
-                <p>法国 | 圣达美隆</p>
-                <p>淡淡的麦秆色伴有柑橘和香草的味道并混有坚果味。酒体饱满...</p>
-                <p>
-                    <span>¥866</span>
-                </p>
-            </div>
-        </a>
-    </div>
-</section>
+        </section>
     </main>
     <footer class="common-footer">
-    <div class="footer-above">
-        <div class="row website-link">
-            <div class="column">
-                <ul class="link-list">
-                    <li class="link-item">
-                        <a href="#">关于我们</a>
-                    </li>
-                    <li class="link-item">
-                        <a href="#">加入我们</a>
-                    </li>
-                    <li class="link-item">
-                        <a href="#">联系我们</a>
-                    </li>
-                    <li class="link-item">
-                        <a href="#">代理合作</a>
-                    </li>
-                </ul>
+        <div class="footer-above">
+            <div class="row website-link">
+                <div class="column">
+                    <ul class="link-list">
+                        <li class="link-item">
+                            <a href="#">关于我们</a>
+                        </li>
+                        <li class="link-item">
+                            <a href="#">加入我们</a>
+                        </li>
+                        <li class="link-item">
+                            <a href="#">联系我们</a>
+                        </li>
+                        <li class="link-item">
+                            <a href="#">代理合作</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="column">
+                    <ul class="link-list">
+                        <li class="link-item">
+                            <span class="iconfont icon-Language"></span>
+                            <span>简体中文</span>
+                        </li>
+                        <li class="link-item">
+                            <a href="#">在线客服</a>
+                        </li>
+                        <li class="link-item">
+                            <a href="#">关注我们</a>
+                        </li>
+                        <li class="link-item">
+                            <span class="iconfont icon-weibotaidu"></span>
+                            <span class="iconfont icon-wechat"></span>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <div class="column">
-                <ul class="link-list">
-                    <li class="link-item">
-                        <span class="iconfont icon-Language"></span>
-                        <span>简体中文</span>
-                    </li>
-                    <li class="link-item">
-                        <a href="#">在线客服</a>
-                    </li>
-                    <li class="link-item">
-                        <a href="#">关注我们</a>
-                    </li>
-                    <li class="link-item">
-                        <span class="iconfont icon-weibotaidu"></span>
-                        <span class="iconfont icon-wechat"></span>
-                    </li>
-                </ul>
+            <div class="row statement">
+                <p class="copyright">
+                    <span>Confidential</span>
+                    <span class="iconfont icon-copyright"></span>
+                    <span>2017 Y-store 广州福思酒业 版权所有</span>
+                </p>
+                <p class="callback">
+                    <span>
+                        <a href="#">法律声明</a>
+                    </span>
+                    <span>
+                        <a href="#">问题反馈</a>
+                    </span>
+                </p>
             </div>
         </div>
-        <div class="row statement">
-            <p class="copyright">
-                Confidential
-                <span class="iconfont icon-copyright"></span>
-                2017 Y-store 广州福思酒业 版权所有
-            </p>
-            <p class="callback">
-                <span>
-                    <a href="#">法律声明</a>
-                </span>
-                <span>
-                    <a href="#">问题反馈</a>
-                </span>
-            </p>
+        <div class="footer-below">
+            <div class="toTop" id="toTop">
+                <span class="iconfont icon-arrow_top"></span>
+            </div>
         </div>
-    </div>
-    <div class="footer-below">
-        <div class="toTop" id="toTop">
-            <span class="iconfont icon-arrow_top"></span>
-        </div>
-    </div>
-</footer> <script src="js/public/jquery.min.js"></script>
-<script src="js/public/base.js"></script>
+    </footer>
+    <script src="js/public/jquery.min.js"></script>
+    <script src="js/public/base.js"></script>
     <script src="js/public/swiper/swiper.js"></script>
 </body>
 
