--- a/search.html
+++ b/search.html
@@ -2,177 +2,178 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8">
-<!-- 优先使用IE最新版本和Chrome -->
-<meta http-equiv="X-UA-Compatiable" content="IE=edge, chrome=1">
-<!-- 360使用Google Chrome Frame -->
-<meta name="renderer" content="webkit">
-<!-- 百度禁止转码 -->
-<meta http-equiv="Cache-Control" content="no-siteapp">
-<meta name="keywords" content="your keywords">
-<meta name="description" content="your description">
-<!-- 定义网页搜索引擎索引方式 -->
-<meta name="robots" content="index,follow">
-<!-- ios设备 -->
-<!-- 添加到主屏后的标题 -->
-<meta name="apple-mobile-web-app-title" content="标题">
-<!-- 是否启用WebApp全屏模式 -->
-<meta content="yes" name="apple-mobile-web-app-capable">
-<meta content="yes" name="apple-touch-fullscreen">
-<!-- 设置状态栏的背景颜色 -->
-<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-<!-- 禁止数字识别为电话号码 -->
-<!-- <meta content="telephone=no, email=no" name="format-detection"> -->
-<!-- Android theme-color用来控制选项卡颜色。 -->
-<meta name="theme-color" content="#747474">
-<meta name="mobile-web-app-capable" content="yes">
-<!-- 关闭chrome浏览器下翻译插件 -->
-<meta name="google" value="notranslate" />
-<!-- uc强制竖屏 -->
-<meta name="screen-orientation" content="portrait">
-<!-- QQ强制竖屏 -->
-<meta name="x5-orientation" content="portrait">
-<!-- UC强制全屏 -->
-<meta name="full-screen" content="yes">
-<!-- QQ强制全屏 -->
-<meta name="x5-fullscreen" content="true">
-<!-- UC应用模式 -->
-<meta name="browsermode" content="application">
-<!-- QQ应用模式 -->
-<meta name="x5-page-mode" content="app">
-<script src="http://g.tbcdn.cn/mtb/lib-flexible/0.3.4/??flexible_css.js,flexible.js"></script>
-<!-- IOS图标 -->
-<!-- apple-touch-icon 图片自动处理成圆角和高光等效果 -->
+    <meta charset="UTF-8">
+    <!-- 优先使用IE最新版本和Chrome -->
+    <meta http-equiv="X-UA-Compatiable" content="IE=edge, chrome=1">
+    <!-- 360使用Google Chrome Frame -->
+    <meta name="renderer" content="webkit">
+    <!-- 百度禁止转码 -->
+    <meta http-equiv="Cache-Control" content="no-siteapp">
+    <meta name="keywords" content="your keywords">
+    <meta name="description" content="your description">
+    <!-- 定义网页搜索引擎索引方式 -->
+    <meta name="robots" content="index,follow">
+    <!-- ios设备 -->
+    <!-- 添加到主屏后的标题 -->
+    <meta name="apple-mobile-web-app-title" content="标题">
+    <!-- 是否启用WebApp全屏模式 -->
+    <meta content="yes" name="apple-mobile-web-app-capable">
+    <meta content="yes" name="apple-touch-fullscreen">
+    <!-- 设置状态栏的背景颜色 -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <!-- 禁止数字识别为电话号码 -->
+    <!-- <meta content="telephone=no, email=no" name="format-detection"> -->
+    <!-- Android theme-color用来控制选项卡颜色。 -->
+    <meta name="theme-color" content="#747474">
+    <meta name="mobile-web-app-capable" content="yes">
+    <!-- 关闭chrome浏览器下翻译插件 -->
+    <meta name="google" value="notranslate" />
+    <!-- uc强制竖屏 -->
+    <meta name="screen-orientation" content="portrait">
+    <!-- QQ强制竖屏 -->
+    <meta name="x5-orientation" content="portrait">
+    <!-- UC强制全屏 -->
+    <meta name="full-screen" content="yes">
+    <!-- QQ强制全屏 -->
+    <meta name="x5-fullscreen" content="true">
+    <!-- UC应用模式 -->
+    <meta name="browsermode" content="application">
+    <!-- QQ应用模式 -->
+    <meta name="x5-page-mode" content="app">
+    <script src="http://g.tbcdn.cn/mtb/lib-flexible/0.3.4/??flexible_css.js,flexible.js"></script>
+    <!-- IOS图标 -->
+    <!-- apple-touch-icon 图片自动处理成圆角和高光等效果 -->
 
-<link rel="apple-touch-icon" href="favicon.png">
-<link rel="Shortcut Icon" href="favicon.png" type="image/x-icon">
-<link rel="stylesheet" href="css/fonts/iconfont.css">
-<link rel="stylesheet" href="css/swiper/swiper.css">
-<link rel="stylesheet" href="css/layout.css">
-	<link rel="stylesheet" type="text/css" href="css/search.css">
-	<title>搜索页面</title>
-	<script>
-		function clickA() {
-			console.log("aaa");
-			document.getElementById("searchInput").value = "";
-		}
-	</script>
+    <!-- <link rel="apple-touch-icon" href="favicon.png">
+    <link rel="Shortcut Icon" href="favicon.png" type="image/x-icon"> -->
+    <link rel="stylesheet" href="css/fonts/iconfont.css">
+    <link rel="stylesheet" href="css/swiper/swiper.css">
+    <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" type="text/css" href="css/search.css">
+    <title>搜索页面</title>
+    <script>
+        function clickA() {
+            console.log("aaa");
+            document.getElementById("searchInput").value = "";
+        }
+    </script>
 </head>
 
 <body>
-	<header class="common-header">
-    <nav class="nav-bar">
-        <div class="nav-button">
-            <div class="btn-groups">
-                <a class="nav-collaspe" href="navigation.html">
-                    <i class="iconfont icon-rows"></i>
+    <header class="common-header">
+        <nav class="nav-bar">
+            <div class="nav-button">
+                <div class="btn-groups">
+                    <a class="nav-collaspe" href="navigation.html">
+                        <i class="iconfont icon-rows"></i>
+                    </a>
+                    <a class="nav-search" href="search.html">
+                        <i class="iconfont icon-magnifier"></i>
+                    </a>
+                </div>
+                <div class="nav-brand">
+                    <a href="index.html">
+                        <img src="images/site-logo.png" alt="site logo">
+                    </a>
+                </div>
+                <a class="nav-cart" href="login.html">
+                    <i class="iconfont icon-cc-cart"></i>
                 </a>
-                <a class="nav-search" href="search.html">
-                    <i class="iconfont icon-magnifier"></i>
-                </a>
             </div>
-            <div class="nav-brand">
-                <a href="index.html">
-                    <img src="images/site-logo.png" alt="site logo">
-                </a>
+        </nav>
+    </header>
+    <main class="main">
+
+        <div class="banner">
+            <h2 class="banner-title">搜索</h2>
+        </div>
+        <section class="item-section">
+            <div class="search-wrapper">
+                <div class="search-content">
+                    <div class="search-input-container">
+                        <div class="user-close">
+                            <i class="iconfont icon-close" onclick="clickA()"></i>
+                        </div>
+                        <div class="user-box">
+                            <input id="searchInput" class="user-input" type="text" name="" value="" placeholder="查找商品或者文章">
+                        </div>
+                        <div class="user-search">
+                            <i class="iconfont icon-magnifier"></i>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="view-all">
+                    <a href="###">查看全部商品</a>
+                </div>
             </div>
-            <a class="nav-cart" href="login.html">
-                <i class="iconfont icon-cc-cart"></i>
-            </a>
-        </div>
-    </nav>
-</header>
-	<main class="main">
 
-		<div class="banner">
-			<h2 class="banner-title">搜索</h2>
-		</div>
-		<section class="item-section">
-			<div class="search-wrapper">
-				<div class="search-content">
-					<div class="search-input-container">
-						<div class="user-close">
-							<i class="iconfont icon-close" onclick="clickA()"></i>
-						</div>
-						<div class="user-box">
-							<input id="searchInput" class="user-input" type="text" name="" value="" placeholder="查找商品或者文章">
-						</div>
-						<div class="user-search">
-							<i class="iconfont icon-magnifier"></i>
-						</div>
-					</div>
-				</div>
+            <div class="footer-background"></div>
+        </section>
+    </main>
 
-				<div class="view-all">
-					<a href="###">查看全部商品</a>
-				</div>
-			</div>
-
-			<div class="footer-background"></div>
-		</section>
-	</main>
-
-	<footer class="common-footer">
-    <div class="footer-above">
-        <div class="row website-link">
-            <div class="column">
-                <ul class="link-list">
-                    <li class="link-item">
-                        <a href="#">关于我们</a>
-                    </li>
-                    <li class="link-item">
-                        <a href="#">加入我们</a>
-                    </li>
-                    <li class="link-item">
-                        <a href="#">联系我们</a>
-                    </li>
-                    <li class="link-item">
-                        <a href="#">代理合作</a>
-                    </li>
-                </ul>
+    <footer class="common-footer">
+        <div class="footer-above">
+            <div class="row website-link">
+                <div class="column">
+                    <ul class="link-list">
+                        <li class="link-item">
+                            <a href="#">关于我们</a>
+                        </li>
+                        <li class="link-item">
+                            <a href="#">加入我们</a>
+                        </li>
+                        <li class="link-item">
+                            <a href="#">联系我们</a>
+                        </li>
+                        <li class="link-item">
+                            <a href="#">代理合作</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="column">
+                    <ul class="link-list">
+                        <li class="link-item">
+                            <span class="iconfont icon-Language"></span>
+                            <span>简体中文</span>
+                        </li>
+                        <li class="link-item">
+                            <a href="#">在线客服</a>
+                        </li>
+                        <li class="link-item">
+                            <a href="#">关注我们</a>
+                        </li>
+                        <li class="link-item">
+                            <span class="iconfont icon-weibotaidu"></span>
+                            <span class="iconfont icon-wechat"></span>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <div class="column">
-                <ul class="link-list">
-                    <li class="link-item">
-                        <span class="iconfont icon-Language"></span>
-                        <span>简体中文</span>
-                    </li>
-                    <li class="link-item">
-                        <a href="#">在线客服</a>
-                    </li>
-                    <li class="link-item">
-                        <a href="#">关注我们</a>
-                    </li>
-                    <li class="link-item">
-                        <span class="iconfont icon-weibotaidu"></span>
-                        <span class="iconfont icon-wechat"></span>
-                    </li>
-                </ul>
+            <div class="row statement">
+                <p class="copyright">
+                    <span>Confidential</span>
+                    <span class="iconfont icon-copyright"></span>
+                    <span>2017 Y-store 广州福思酒业 版权所有</span>
+                </p>
+                <p class="callback">
+                    <span>
+                        <a href="#">法律声明</a>
+                    </span>
+                    <span>
+                        <a href="#">问题反馈</a>
+                    </span>
+                </p>
             </div>
         </div>
-        <div class="row statement">
-            <p class="copyright">
-                Confidential
-                <span class="iconfont icon-copyright"></span>
-                2017 Y-store 广州福思酒业 版权所有
-            </p>
-            <p class="callback">
-                <span>
-                    <a href="#">法律声明</a>
-                </span>
-                <span>
-                    <a href="#">问题反馈</a>
-                </span>
-            </p>
+        <div class="footer-below">
+            <div class="toTop" id="toTop">
+                <span class="iconfont icon-arrow_top"></span>
+            </div>
         </div>
-    </div>
-    <div class="footer-below">
-        <div class="toTop" id="toTop">
-            <span class="iconfont icon-arrow_top"></span>
-        </div>
-    </div>
-</footer> <script src="js/public/jquery.min.js"></script>
-<script src="js/public/base.js"></script>
+    </footer>
+    <script src="js/public/jquery.min.js"></script>
+    <script src="js/public/base.js"></script>
     <script src="js/public/swiper/swiper.js"></script>
 
 </body>
